# mcp

nrcc-search/: .env  .env.example  ARCHITECTURE.md  AUTH_README.md  README.md  TODO.md  auth_middleware.py  main.py  mermaid.md  nrcc_search.py  pyproject.toml  test_auth.py
nrcc-search/.roo/: mcp.json
nrcc-search/src/: __init__.py
nrcc-search/src/core/: __init__.py  nrcc_search.py
nrcc-search/src/utils/: __init__.py  middleware.py
weather/: weather.py
weather/.roo/: mcp.json
